--- a/app/assets/stylesheets/unregistered/login_box.css.scss
+++ b/app/assets/stylesheets/unregistered/login_box.css.scss
@@ -39,14 +39,14 @@ body.unregistered {
 
     div.login {
       width: 34px;
-      position: relative;
+      padding-top: 80px;
       background-image: image-url("lock_enter.png");
       background-position: top;
       background-repeat: no-repeat;
-      padding-top: 80px;
+      text-align: center;
       color: #92716a;
       font-size: 14px;
-      text-align: center;
+      position: relative;
       float: left;
       cursor: pointer;
       &:hover { text-decoration:underline; }
@@ -55,14 +55,14 @@ body.unregistered {
     div.registration {
       width: 128px;
       height: 80px;
-      position: relative;
-      float: left;
+      margin-left: 21px;
       background-image: image-url("key.png");
       background-position: 0px 15px;
       background-repeat: no-repeat;
-      margin-left: 21px;
-      font-size: 14px;
       color: #656565;
+      font-size: 14px;
+      position: relative;
+      float: left;
       cursor: pointer;
       &:hover { text-decoration:underline; }
     }
@@ -70,8 +70,13 @@ body.unregistered {
 
   /*  REGISTER CLIENT BLOCK*/
   #register {
-    width: 477px;
     height: 450px;
+  }
+  #register_short {
+    height: 260px;
+  }
+  #register, #register_short {
+    width: 477px;
     background-color: #FFFFFF;
     margin: 0px auto;
     position: relative;
@@ -79,16 +84,6 @@ body.unregistered {
     font-family: Tahoma;
     display: none;
 
-    div.head_register {
-      height: 29px;
-      width: 220px;
-      background-image: image-url("register_logo.png");
-      background-position: left;
-      background-repeat: no-repeat;
-      padding: 0px;
-      float: left;
-      margin: 30px 0px 40px 30px;
-    }
 
     div.head_none {
       height: 29px;
@@ -99,21 +94,6 @@ body.unregistered {
       padding: 0px;
       float: left;
       margin: 30px 0px 40px 30px;
-    }
-
-    div.goto_register {
-      height: 25px;
-      width: 100px;
-      background-image: image-url("enter_logo_small.png");
-      background-repeat: no-repeat;
-      padding: 0px;
-      float: left;
-      margin-top: 34px;
-      margin-left: 10px;
-      &:hover {
-        background-image: image-url("enter_logo_small_hover.png");
-        cursor: pointer;
-      }
     }
 
     div.info {
@@ -149,7 +129,6 @@ body.unregistered {
     }
   }
 
-
   /*  LOGIN CLIENT BLOCK*/
   #login {
     width: 412px;
@@ -160,30 +139,6 @@ body.unregistered {
     margin-top: 200px;
     font-family: Tahoma;
     display: none;
-
-
-    div.head_register {
-      height: 29px;
-      width: 115px;
-      background-image: image-url("enter_logo.png");
-      background-repeat: no-repeat;
-      margin: 30px 0px 40px 30px;
-      float: left;
-    }
-
-    div.goto_register {
-      height: 29px;
-      width: 170px;
-      background-image: image-url("register_logo_small.png");
-      background-repeat: no-repeat;
-      padding: 0px;
-      float: left;
-      margin-top: 37px;
-      &:hover {
-        background-image: image-url("register_logo_small_hover.png");
-        cursor: pointer;
-      }
-    }
 
     div.head_none {
       height: 29px;
@@ -232,6 +187,81 @@ body.unregistered {
       }
     }
   }
+
+
+    .head_login {
+      height: 29px;
+      width: 115px;
+      background-image: image-url("enter_logo.png");
+      background-repeat: no-repeat;
+      float: left;
+    }
+
+    .goto_register {
+      height: 29px;
+      width: 170px;
+      background-image: image-url("register_logo_small.png");
+      background-repeat: no-repeat;
+      float: left;
+      &:hover {
+        background-image: image-url("register_logo_small_hover.png");
+        cursor: pointer;
+      }
+    }
+
+    .head_register {
+      height: 29px;
+      width: 220px;
+      background-image: image-url("register_logo.png");
+      background-position: left;
+      background-repeat: no-repeat;
+      float: left;
+    }
+
+    .goto_login {
+      height: 25px;
+      width: 100px;
+      background-image: image-url("enter_logo_small.png");
+      background-repeat: no-repeat;
+      float: left;
+      &:hover {
+        background-image: image-url("enter_logo_small_hover.png");
+        cursor: pointer;
+      }
+    }
+
+  #login {
+    .head_login {
+      margin: 30px 0px 40px 30px;
+    }
+    .goto_register {
+      padding: 0px;
+      margin-top: 37px;
+    }
+  }
+  #register {
+    .head_register {
+      padding: 0px;
+      margin: 30px 0px 40px 30px;
+    }
+    .goto_login {
+      padding: 0px;
+      margin-top: 34px;
+      margin-left: 10px;
+    }
+  }
+
+  #register_short {
+    .goto_login {
+      padding: 0px;
+      margin: 30px 0px 40px 30px;
+    }
+    .goto_register {
+      padding: 0px;
+      margin: 30px 0px 40px 30px;
+    }
+  }
+
 
   .submit_button {
     float: right;
